crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__angular.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "horizon.templatetags.angular::tag::angular_templates":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities:
  "horizon.templatetags.angular::filter::angular_escapes": no_argument
block_specs: {}
