crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__bootstrap.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "horizon.templatetags.bootstrap::tag::bs_progress_bar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: args
          requirement: optional
          kind: VarArgs
    as_var: keep
filter_arities: {}
block_specs: {}
