crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__breadcrumb_nav.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::breadcrumb_nav":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "horizon.templatetags.breadcrumb_nav::tag::breadcrumb_nav":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
