crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__form_helpers.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::add_bootstrap_class":
    kind: filter
    has_doc: false
  "filter::add_item_url":
    kind: filter
    has_doc: false
  "filter::autocomplete":
    kind: filter
    has_doc: false
  "filter::get_range":
    kind: filter
    has_doc: false
  "filter::is_checkbox":
    kind: filter
    has_doc: false
  "filter::is_file":
    kind: filter
    has_doc: false
  "filter::is_multiple_checkbox":
    kind: filter
    has_doc: false
  "filter::is_number":
    kind: filter
    has_doc: false
  "filter::is_radio":
    kind: filter
    has_doc: false
  "filter::wrapper_classes":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "horizon.templatetags.form_helpers::filter::add_bootstrap_class": no_argument
  "horizon.templatetags.form_helpers::filter::add_item_url": no_argument
  "horizon.templatetags.form_helpers::filter::autocomplete": optional_argument
  "horizon.templatetags.form_helpers::filter::get_range": no_argument
  "horizon.templatetags.form_helpers::filter::is_checkbox": no_argument
  "horizon.templatetags.form_helpers::filter::is_file": no_argument
  "horizon.templatetags.form_helpers::filter::is_multiple_checkbox": no_argument
  "horizon.templatetags.form_helpers::filter::is_number": no_argument
  "horizon.templatetags.form_helpers::filter::is_radio": no_argument
  "horizon.templatetags.form_helpers::filter::wrapper_classes": no_argument
block_specs: {}
