crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__horizon.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
tag_rules:
  "horizon.templatetags.horizon::tag::datepicker_locale":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: strip
  "horizon.templatetags.horizon::tag::horizon_dashboard_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: keep
  "horizon.templatetags.horizon::tag::horizon_main_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: keep
  "horizon.templatetags.horizon::tag::horizon_nav":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: keep
  "horizon.templatetags.horizon::tag::load_config":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: strip
  "horizon.templatetags.horizon::tag::quotapercent":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters:
        - name: used
          requirement: required
          kind: Variable
        - name: limit
          requirement: required
          kind: Variable
    as_var: strip
  "horizon.templatetags.horizon::tag::template_cache_age":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Parameters: []
    as_var: strip
filter_arities:
  "horizon.templatetags.horizon::filter::has_permissions": required_argument
  "horizon.templatetags.horizon::filter::has_permissions_on_list": required_argument
  "horizon.templatetags.horizon::filter::quota": optional_argument
  "horizon.templatetags.horizon::filter::quotainf": optional_argument
block_specs:
  "horizon.templatetags.horizon::tag::jstemplate":
    body_analysis_evidence: not_detected
    end_tag: endjstemplate
    intermediates: []
  "horizon.templatetags.horizon::tag::minifyspace":
    body_analysis_evidence: not_detected
    end_tag: endminifyspace
    intermediates: []
