crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__parse_date.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::parse_date":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "horizon.templatetags.parse_date::filter::parse_date": no_argument
block_specs: {}
