crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__shellfilter.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::shellfilter":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
