crates/djls-project/tests/snapshots/corpus__repos__horizon__horizon__templatetags__sizeformat.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::diskgbformat":
    kind: filter
    has_doc: false
  "filter::mb_float_format":
    kind: filter
    has_doc: false
  "filter::mbformat":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "horizon.templatetags.sizeformat::filter::diskgbformat": no_argument
  "horizon.templatetags.sizeformat::filter::mb_float_format": no_argument
  "horizon.templatetags.sizeformat::filter::mbformat": no_argument
block_specs: {}
